@@ -1,4 +1,9 @@
-2014-04-17  Xiaowei Zhan  <zhanxw@dumbo.csgstat.sph.umich.edu>
+2014-06-13  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
+
+	* Fix trait summary in the MetaScore file header
+	* Improve model stability in MetaCov model
+
+2014-04-17  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Fix "--meta score" model outputs again... This time the results have been verified by Merlin
 
